k8s/cert-manager/ingressroute.yml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: sandbox
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`whoami.localnet`)
      kind: Rule
      services:
        - name: api@internal
          kind: TraefikService
      middlewares:
        - name: auth
  # Use the secret generated by cert-manager
  tls:
    secretName: whoami.localnet
